Prepare for Deepseek V3

--- a/.rooignore
+++ b/.rooignore
@@ -6,8 +6,8 @@ opus/*
 gemini/*
 grok/*
 deepseek_r1/*
-deepseek_v3/*
-# qwen_thinking/*
+# deepseek_v3/*
+qwen_thinking/*
 qwen_coder/*
 kimi/*
 glm/*
