--- a/deepseek_v3/package.json
+++ b/deepseek_v3/package.json
@@ -30,15 +30,16 @@
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.5",
+    "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.1",
+    "@types/compression": "^1.8.1",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
     "@types/socket.io": "^3.0.2",
-    "@testing-library/jest-dom": "^6.1.5",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/user-event": "^14.5.1",
-    "@types/jest": "^29.5.11",
     "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "css-minimizer-webpack-plugin": "^5.0.1",
